--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p><i class="fas fa-play"></i> - start</p>
                 <p><i class="fas fa-pause"></i> - pauza</p>
                 <p><i class="fas fa-stop"></i> - stop</p>
-                <p><i class="fas fa-times"></i> - skasuj wszystko (Ĺ‚Ä…cznie z archiwum)</p>
+                <p><i class="fas fa-times"></i> - skasuj wszystko (Łącznie z archiwum)</p>
                 <p><strong>archiwum</strong> - zobacz wcześniejsze pomiary</p>
                 <button class="close">Zamknij</button>
             </div>
